# music-library

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  TODO.md  docker-compose.yml  pyproject.toml
.agent/: status.md
.github/workflows/: docker-publish.yml
app/: config.py  database.py  esp_app.py  main.py  server.py
app/api/: auth.py  covers.py  media.py  music_assistant.py  quick.py  rfid.py  system.py  tags.py  views.py
app/models/: media.py  rfid.py
app/schemas/: media.py  rfid.py
app/services/: auth_service.py  cover_service.py  media_service.py  music_assistant.py  permissions.py  rfid_service.py  select_engine.py  tag_service.py
app/static/css/: app.css
app/templates/: base.html  index.html
app/templates/components/: audiobook_chapters.html  ma_items.html  ma_search_results.html  media_card.html  media_grid.html  media_tags.html  media_tags_block.html  podcast_episodes.html  rfid_assigned.html  rfid_block.html
app/templates/ma/: browse.html  players.html
app/templates/media/: detail.html  form.html  list.html
app/templates/quick/: index.html
app/templates/rfid/: list.html
app/templates/tags/: list.html
docs/: AUTH.md  MUSIC_ASSISTANT_COMPATIBILITY.md  PLAN.md  REQUIREMENTS.md
tests/: test_auth_permissions.py  test_cover_resize.py  test_esp_api.py  test_ma_controls_and_children.py  test_media_dedup.py  test_music_assistant_client.py  test_quick_api.py  test_quick_launcher.py  test_rfid.py  test_select_engine.py
